Added transitions to new classList, and script to execute class toggle

--- a/expanding_cards/index.html
+++ b/expanding_cards/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="img_wrapper">
-        <div class="image photo_shrinked">
+        <div class="image photo_shrinked photo_expanded">
             <img src="https://thumbs.dreamstime.com/b/golden-gate-bridge-san-francisco-purple-flowers-california-echium-candicans-36805947.jpg" alt="San Francisco">
         </div>
         <div class="image photo_shrinked">
