labels were added to cards. everything was aligned to the center

--- a/expanding_cards/index.html
+++ b/expanding_cards/index.html
@@ -9,20 +9,27 @@
 </head>
 <body>
     <div class="img_wrapper">
-        <div class="image photo_shrinked photo_expanded">
-            <img src="https://thumbs.dreamstime.com/b/golden-gate-bridge-san-francisco-purple-flowers-california-echium-candicans-36805947.jpg" alt="San Francisco">
-        </div>
-        <div class="image photo_shrinked">
-            <img src="https://media.istockphoto.com/photos/the-city-of-dreams-new-york-citys-skyline-at-twilight-picture-id599766748?b=1&k=20&m=599766748&s=612x612&w=0&h=HeNV3ZW48i_q1GQnmxIi8xUKaUXuXwnDKEP2OfcYiGc=" alt="New York">
-        </div>
-        <div class="image photo_shrinked">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-m/1280/1c/c9/6a/61/caption.jpg" alt="Washington DC">
-        </div>
-        <div class="image photo_shrinked">
-            <img src="https://a.cdn-hotels.com/gdcs/production54/d346/a7f50b1f-9730-4d1e-93d6-c3239b81f394.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Seattle">
-        </div>
-        <div class="image photo_shrinked">
-            <img src="https://www.travelandleisure.com/thmb/_aMbik8KZYsUKc_6_XNeAOzPi84=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/boston-massachusetts-BOSTONTG0221-719aef2eeb1c4929b6c839715e34a69e.jpg" alt="Boston">
+        <div class="flex-center">
+            <div class="image photo_shrinked photo_expanded">
+                <img src="https://thumbs.dreamstime.com/b/golden-gate-bridge-san-francisco-purple-flowers-california-echium-candicans-36805947.jpg" alt="San Francisco">
+                <h2>San Francisco</h2>
+            </div>
+            <div class="image photo_shrinked">
+                <img src="https://media.istockphoto.com/photos/the-city-of-dreams-new-york-citys-skyline-at-twilight-picture-id599766748?b=1&k=20&m=599766748&s=612x612&w=0&h=HeNV3ZW48i_q1GQnmxIi8xUKaUXuXwnDKEP2OfcYiGc=" alt="New York">
+                <h2>New York</h2>
+            </div>
+            <div class="image photo_shrinked">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-m/1280/1c/c9/6a/61/caption.jpg" alt="Washington DC">
+                <h2>Washington DC</h2>
+            </div>
+            <div class="image photo_shrinked">
+                <img src="https://a.cdn-hotels.com/gdcs/production54/d346/a7f50b1f-9730-4d1e-93d6-c3239b81f394.jpg?impolicy=fcrop&w=800&h=533&q=medium" alt="Seattle">
+                <h2>Seattle</h2>
+            </div>
+            <div class="image photo_shrinked">
+                <img src="https://www.travelandleisure.com/thmb/_aMbik8KZYsUKc_6_XNeAOzPi84=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/boston-massachusetts-BOSTONTG0221-719aef2eeb1c4929b6c839715e34a69e.jpg" alt="Boston">
+                <h2>Boston</h2>
+            </div>
         </div>
     </div>    
     <script src="script.js"></script>
