SF image changed

--- a/expanding_cards/index.html
+++ b/expanding_cards/index.html
@@ -11,7 +11,7 @@
     <div class="img_wrapper">
         <div class="flex-center">
             <div class="image photo_shrinked photo_expanded">
-                <img src="https://thumbs.dreamstime.com/b/golden-gate-bridge-san-francisco-purple-flowers-california-echium-candicans-36805947.jpg" alt="San Francisco">
+                <img src="https://a.cdn-hotels.com/gdcs/production92/d1580/9a28fc70-9bea-11e8-a1b5-0242ac110053.jpg" alt="San Francisco">
                 <h2>San Francisco</h2>
             </div>
             <div class="image photo_shrinked">
